# grpc-php-rs

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  composer.json  docker-compose.integration.yml  test.sh
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile
src/: call.rs  channel.rs  codec.rs  compat.rs  credentials.rs  error.rs  lib.rs  runtime.rs  timeval.rs
tests/: Caddyfile.test  Dockerfile  leak_test.php  test_channel_ssl.php  test_empty_response.php  test_firestore_fake.php  test_firestore_set.php  test_grpc_compat.php  test_grpc_gcp_compat.php  test_smoke.php  test_streaming.php  test_zts_docker.sh  test_zts_stress.php
tests/integration/: composer.json  otel-collector.yaml  test_otel.php  test_temporal.php
tests/server/: Cargo.toml
tests/server/proto/: test.proto
tests/server/src/: main.rs
